--- a/index.html
+++ b/index.html
@@ -2936,9 +2936,14 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
       html += `<input type='checkbox' class='form-check-input' id='confirm-save-inspection'>`;
       html += `<label class='form-check-label' for='confirm-save-inspection'>Confirm Save Inspection</label>`;
       html += `</div>`;
-      html += `<button id='save-inspection' class='btn btn-success w-100 mb-2' type='button' disabled>Save Inspection</button>`;
     }
-    html += `<button id='view-history' class='btn btn-outline-secondary w-100' type='button'>View History</button>`;
+    // Buttons in a row at the bottom
+    html += `<div class='d-flex gap-2 justify-content-end mt-3'>`;
+    if (canEdit) {
+      html += `<button id='save-inspection' class='btn btn-success flex-fill' type='button' disabled>Save Inspection</button>`;
+    }
+    html += `<button id='view-history' class='btn btn-outline-secondary flex-fill' type='button'>View History</button>`;
+    html += `</div>`;
     html += `</form>`;
     // Remove any existing modal
     document.querySelectorAll('.modal-backdrop-custom').forEach(e => e.remove());
